# path-tracing-opencl-interop

./: CMakeLists.txt  README.md  Scene.cpp  Scene.h  geometry.h  gl_interop.h  main.cpp  opencl_kernel.cl  requirements.arch.txt  user_interaction.h
